Remove deprecated Create and GET Merchants API files; enhance SecurityConfig with CORS filter registration and update merchant API integration in frontend. Add new types for source configuration and update merchant response.